# rule-repository

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FEATURES.md  IMPROVEMENT.md  Makefile  PROJECT.md  README.md  docker-compose.yml  mkdocs.yml  pnpm-lock.yaml  pyproject.toml
apps/server/: alembic.ini  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 001_initial_schema.py  002_add_llm_cache.py  003_add_intelligence_tables.py  004_add_gateway_tables.py  005_add_discovery_tables.py  006_add_feedback_tables.py  007_add_federation_tables.py  008_add_playground_tables.py  009_add_alerts_table.py  010_add_snapshot_tables.py  011_add_document_content_text.py  012_add_projects.py  013_update_corrections_table.py  014_add_evaluations_table.py  015_add_maturity_level.py  016_add_draft_proposals.py  017_add_agent_id_to_evaluations.py  018_add_proposals.py  019_add_agent_governance.py  020_add_marketplace.py  020_placeholder.py  021_add_rule_context.py  022_add_rule_examples.py  023_add_sensitivity_and_context_encrypted.py  024_add_tenant_cost_polyglot.py  025_add_regulatory_severity.py  026_add_subject_jurisdiction_fields.py  027_rename_subject_kinds.py  028_add_departments_capacities.py  029_add_classification_column.py  030_add_surface_aware_rule_fields.py  031_add_surface_aware_evaluation_fields.py  032_backfill_applicable_subject_types.py  033_backfill_structured_scope.py  034_add_rule_kind_column.py  035_add_constraints_column.py  035_create_rule_translations_table.py  036_create_rule_translations_table.py  037_move_frozen_tables_to_schema.py  038_add_structured_scope_gin_indexes.py  (+4 more)
apps/server/eval/: drift.py  models.py  runner.py
apps/server/eval/ab_testing/: splitter.py
apps/server/eval/datasets/content/: v1.yaml
apps/server/eval/datasets/engineering/: v1.yaml
apps/server/eval/datasets/hr/: v1.yaml
apps/server/eval/datasets/legal/: v1.yaml
apps/server/eval/reporters/: console.py  json_reporter.py
apps/server/eval_harness/: __init__.py  __main__.py  metrics.py  regression_gates.py  runner.py
apps/server/eval_harness/datasets/: __init__.py  communications_golden.jsonl  engineering_golden.jsonl  finance_golden.jsonl  governance_golden.jsonl  hr_golden.jsonl  it_security_golden.jsonl  legal_golden.jsonl  sales_golden.jsonl
apps/server/eval_harness/reports/: __init__.py
apps/server/src/rulerepo_server/: __init__.py  main.py
apps/server/src/rulerepo_server/adapters/: contract_compare.py  contract_parser.py
apps/server/src/rulerepo_server/core/: __init__.py  abac.py  auth.py  auth_oidc.py  config.py  db_context.py  deps.py  errors.py  feature_flags.py  llm.py  llm_safety.py  logging.py  metrics.py  middleware.py  pii.py  pii_middleware.py  sod.py  telemetry.py
apps/server/src/rulerepo_server/domain/: __init__.py  abac.py  agent.py  applies_to.py  attestation.py  audit.py  business_event.py  classification.py  contract.py  department.py  evaluable.py  evaluation.py  evaluation_subject.py  event_sequence.py  fact.py  federation.py  governance.py  proposal.py  regulatory.py  remediation.py  revision.py  risk.py  rule.py  scope.py  subject.py  tenant.py  translation.py  verdict.py
apps/server/src/rulerepo_server/domain_packs/: __init__.py
apps/server/src/rulerepo_server/gateway/: __init__.py  policy_engine.py  router.py  schemas.py
apps/server/src/rulerepo_server/integrations/: __init__.py
apps/server/src/rulerepo_server/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
apps/server/src/rulerepo_server/plugins/: _registry.py  base.py
apps/server/src/rulerepo_server/schemas/: __init__.py  agent_governance.py  alerts.py  common.py  contract.py  department.py  discovery.py  evaluation.py  event.py  extraction.py  federation.py  feedback.py  intelligence.py  intent.py  marketplace.py  playground.py  project.py  proposal.py  review.py  rule.py  search.py  snapshots.py  submissions.py
apps/server/src/rulerepo_server/services/: __init__.py  intent.py  llm_budget.py  project_service.py  rule_service.py  search.py
apps/server/src/rulerepo_server/subjects/: __init__.py  base.py  code_change.py  contract_clause.py  expense_claim.py  hr_event.py  registry.py
apps/server/tests/: conftest.py  test_agent_governance.py  test_cross_domain_coverage.py  test_deterministic_evaluator.py  test_domain_pack_scaffolding.py  test_domain_packs_all.py  test_evaluation_subject.py  test_extraction_pipeline.py  test_feature_flags.py  test_governance.py  test_lookup_evaluator.py  test_marketplace.py  test_multilingual.py  test_proposals.py  test_remaining_templates.py  test_rule_kind.py  test_schema_evaluator.py  test_scope.py  test_submissions_schema.py  test_template_library.py
apps/server/tests/e2e/: __init__.py  conftest.py  test_evaluation_e2e.py  test_extraction_e2e.py  test_full_workflow.py
apps/server/tests/eval_harness/: README.md  runner.py
apps/server/tests/integration/: test_intent_api.py  test_relationships_api.py  test_rules_api.py  test_search_api.py  test_tenant_isolation.py  test_tier1.py
apps/server/tests/safety/: test_prompt_injection.py
apps/server/tests/unit/: test_abac.py  test_approval_workflows.py  test_business_connectors.py  test_calibration.py  test_classification.py  test_clause_aggregator.py  test_compliance.py  test_conflict_scanner.py  test_connector_hub.py  test_connectors.py  test_context_delivery.py  test_contract_compare.py  test_contract_extraction.py  test_contract_parser.py  test_cost_tracker.py  test_counterexample.py  test_department_authz.py  test_departments.py  test_deterministic_evaluator.py  test_discovery.py  test_discovery_analyzers.py  test_discovery_sources.py  test_document_discovery.py  test_domain.py  test_domain_pack_loader.py  test_drift_detector.py  test_eval_harness.py  test_event_sequence.py  test_fact_store.py  test_gateway.py  test_github_integration.py  test_handbook_extractor.py  test_health_effectiveness.py  test_idempotency.py  test_intelligence.py  test_llm_providers.py  test_mcp_domain_tools.py  test_operability.py  test_phases_9_to_13.py  test_pii.py  (+18 more)
(+892 files in other folders)
