[project]
name = "rule-repository"
version = "0.1.0"
description = "A platform for managing, searching, serving, and enforcing natural-language rules"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"

[dependency-groups]
dev = [
    "rulerepo-server",
    "rulerepo",
    "rulerepo-agentic",
    "rulerepo-cli",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.22",
]

[tool.uv.sources]
rulerepo-server = { workspace = true }
rulerepo = { workspace = true }
rulerepo-agentic = { workspace = true }
rulerepo-cli = { workspace = true }

[tool.uv.workspace]
members = ["apps/server", "packages/rule-client", "packages/agentic-client", "packages/cli"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["apps/server/src", "packages/rule-client/src", "packages/agentic-client/src", "packages/cli/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "ANN", "ASYNC", "S", "T20"]
ignore = [
    "ANN401",  # dynamically typed expressions (Any)
    "ANN201",  # missing return type on public functions (FastAPI endpoints)
    "ANN001",  # missing type annotation for function arguments
    "ANN202",  # missing return type for private methods
    "ANN204",  # missing return type for __init__
    "S101",    # assert used (fine in tests)
    "S104",    # possible binding to all interfaces (intentional for server)
    "S105",    # possible hardcoded password (dev defaults, not production)
    "S108",    # probable insecure temp file usage (dev storage path)
    "S110",    # try-except-pass (intentional for graceful degradation)
    "B007",    # loop variable not used in body (common in dict iteration)
    "B008",    # function call in default argument (standard FastAPI Depends() pattern)
    "UP042",   # str+Enum → StrEnum (keep str+Enum for Pydantic/SQLAlchemy compatibility)
    "SIM105",  # use contextlib.suppress (try-except-pass is clearer)
    "ASYNC230", # async open (file I/O in tests and uploads is acceptable)
    "N818",    # exception name should end in Error (custom hierarchy)
    "RUF059",  # unpacked variable never used (test assertions on other values)
    "RUF005",  # iterable unpacking vs concatenation (stylistic preference)
    "RUF012",  # mutable class attribute default (arq WorkerSettings pattern)
    "E402",    # module level import not at top (conditional/lazy imports)
    "ASYNC109", # async function with timeout param (httpx pattern)
    "S602",    # subprocess shell=True (intentional in CLI tools)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "T20"]
"**/tests/**/*.py" = ["S101", "ANN", "T20"]
"alembic/**/*.py" = ["ANN", "S608"]
"**/alembic/**/*.py" = ["ANN", "S608"]
"scripts/**/*.py" = ["ANN", "T20"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = false
disallow_any_generics = false
disallow_untyped_calls = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "google.*",
    "arq.*",
    "neo4j.*",
    "elasticsearch.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "rulerepo_server.api.v1.*",
    "rulerepo_server.services.*",
    "rulerepo_server.adapters.*",
    "rulerepo_server.gateway.*",
    "rulerepo_server.integrations.*",
    "rulerepo_server.workers.*",
    "rulerepo_server.core.deps",
    "rulerepo_server.mcp.*",
]
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["apps/server/tests", "packages/rule-client/tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[[tool.mypy.overrides]]
module = ["neo4j.*", "google.*", "elasticsearch.*"]
ignore_missing_imports = true
