[project]
name = "rulerepo-server"
version = "0.1.0"
description = "Rule Repository backend server"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "elasticsearch[async]>=8.17,<9",
    "neo4j>=5.27",
    "google-genai>=1.0",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1",
    "mcp>=1.9",
    "sse-starlette>=2.0",
    "arq>=0.26",
    "cryptography>=43.0",
    "asteval>=1.0.8",
]

[project.scripts]
rulerepo-mcp = "rulerepo_server.mcp:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rulerepo_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
